--- a/style.css
+++ b/style.css
@@ -308,8 +308,9 @@ p {
 	font-weight: 500;
 }
 #projects .project-info h2 {
-	font-size: 1.8rem;
+	font-size: 3rem;
 	font-weight: 500;
+	color: blue;
 	margin-top: 10px;
 }
 #projects .project-info p {
@@ -317,10 +318,9 @@ p {
 }
 #projects .project-img {
 	flex-basis: 50%;
-	height: 300px;
-	overflow: hidden;
-	position: relative;
 	opacity: 1;
+	max-height: 100;
+	max-width: 100%;
 }
 #projects .project-img:after {
 	content: '';
@@ -332,12 +332,15 @@ p {
 	background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
 	opacity: .7;
 }
+
 #projects .project-img img {
 	transition: .3s ease transform;
 }
+
 #projects .project-item:hover .project-img img {
 	transform: scale(1.1);
 }
+
 /* End Projects section */
 
 /* About Section */
@@ -549,7 +552,10 @@ p {
 		height: 100%;
 	}
 	#projects .all-projects .project-img {
-		height: 100%;
+		height: 400px;
+		width: auto;
+		object-fit: contain;
+		
 	}
 	/* End Project */
 
