--- a/style.css
+++ b/style.css
@@ -323,22 +323,21 @@ p {
 
 #projects .projects-header h1 {
     margin-bottom: 50px;
+    font-weight: bold;
 }
 
 #projects .all-projects {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    flex-direction:column;
 }
 
 #projects .project-item {
-    display: flex;
+    display:flex;
     align-items: center;
-    justify-content: center;
+    justify-content:center;
     flex-direction: column;
-    width: 80%;
-    margin: 20px auto;
     overflow: hidden;
     border-radius: 10px;
 }
@@ -364,21 +363,58 @@ p {
     font-size: 3rem;
     font-weight: 500;
     color: blue;
-    margin-top: 10px;
+    text-align: center;
 }
+
+/* Tooltip container */
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+  }
+  
+  /* Tooltip text */
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    top: -5px;
+    left: 105%;
+   
+    /* Position the tooltip text - see examples below! */
+    position:absolute;
+    z-index: 1;
+  }
+  
+  /* Show the tooltip text when you mouse over the tooltip container */
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
 
 #projects .project-info p {
     color: rgb(0, 0, 0);
     font-size: 20px;
+    font-weight: bold;
+    text-align: justify;
 }
 
 #projects .project-img {
     flex-basis: 50%;
     opacity: 1;
-    max-height: 100;
-    max-width: 100%;
+    max-height: 100%;
+    max-width: 60%;
+    overflow: hidden;
 }
 
+#projects .video{
+    width: 100%;
+}
+
+/*
 #projects .project-img:after {
     content: '';
     position: absolute;
@@ -388,7 +424,7 @@ p {
     width: 100%;
     background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
     opacity: .7;
-}
+}*/
 
 #projects .project-img img {
     transition: .3s ease transform;
@@ -429,19 +465,22 @@ p {
 #about .col-right {
     width: 100%;
 }
+#about .col-right h1 {
+    font-weight: bold;
+}
 
 #about .col-right h2 {
-    font-size: 1.8rem;
-    font-weight: 700;
-    letter-spacing: .2rem;
-    margin-bottom: 10px;
+    font-size: 3rem;
+    font-weight: 500;
+    color: blue;
 }
 
 #about .col-right p {
     /*about me paragraphs*/
     margin-bottom: 20px;
     font-size: 1.5pc;
-    font-weight: 200;
+    font-weight: bold;
+    color: black;
 }
 
 #about .col-right .cta {
@@ -481,7 +520,9 @@ p {
     max-width: 1200px;
     margin: 0 auto;
 }
-
+#contact .contact h1{
+    font-weight: bold;
+}
 #contact .contact-items {
     width: 400px;
 }
